--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
-        "mongoose": "^6.0.6"
+        "mongoose": "^6.0.6",
+        "uuid": "^8.3.2"
     },
     "engines": {
         "node": "13.10.0"
