--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "nodemon": "^2.0.12"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
+        "express-validator": "^6.12.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.6",
         "uuid": "^8.3.2"
     },
