--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express-fileupload": "^1.2.1",
         "express-validator": "^6.12.1",
         "jsonwebtoken": "^8.5.1",
+        "jwt-decode": "^3.1.2",
         "mongoose": "^6.0.6",
         "uuid": "^8.3.2"
     },
