--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.27.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
